# naia

./: .rustfmt.yml  Cargo.toml  Makefile  deny.toml  license.txt  readme.md  todo.md
client/: Cargo.toml
client/src/: client.rs  client_config.rs  connection.rs  error.rs  events.rs  lib.rs
client/src/connection/: base_time_manager.rs  channel_tick_buffer_sender.rs  connection.rs  handshake_manager.rs  handshake_time_manager.rs  io.rs  mod.rs  tick_buffer_sender.rs  tick_queue.rs  time_manager.rs
client/src/transport/: conditioner.rs  mod.rs  udp.rs  webrtc.rs
server/: Cargo.toml
server/src/: connection.rs  error.rs  events.rs  handshake_manager.rs  lib.rs  room.rs  server.rs  server_config.rs  time_manager.rs  user.rs
server/src/connection/: bandwidth_monitor.rs  connection.rs  handshake_manager.rs  io.rs  mod.rs  ping_manager.rs  tick_buffer_messages.rs  tick_buffer_receiver.rs  tick_buffer_receiver_channel.rs
server/src/transport/: conditioner.rs  mod.rs  udp.rs
shared/: Cargo.toml
shared/derive/: Cargo.toml
shared/derive/src/: channel.rs  lib.rs  message.rs  replicate.rs
shared/serde/: Cargo.toml
shared/serde/derive/: Cargo.toml
shared/serde/derive/src/: lib.rs
shared/serde/derive/src/impls/: enumeration.rs  mod.rs  structure.rs  tuple_structure.rs  unit_structure.rs
shared/serde/src/: bit_counter.rs  bit_reader.rs  bit_writer.rs  error.rs  integer.rs  lib.rs  serde.rs
shared/serde/src/impls/: array.rs  boxed.rs  hash.rs  option.rs  scalars.rs  string.rs  tuple.rs  vector.rs
shared/src/: error.rs  game_time.rs  id_pool.rs  index_buffer.rs  key_generator.rs  lib.rs  protocol.rs  schema.rs  timer.rs  types.rs
shared/src/backends/: mod.rs
shared/src/connection/: ack_manager.rs  bandwidth_monitor.rs  base_connection.rs  compression_config.rs  conditioner.rs  connection_config.rs  decoder.rs  encoder.rs  io.rs  mod.rs  packet.rs  ping_manager.rs  ping_store.rs  sequence_buffer.rs  standard_header.rs
shared/src/messages/: message.rs  message_container.rs  message_kinds.rs  message_manager.rs
shared/src/messages/channels/: channel.rs  channel_kinds.rs  mod.rs
shared/src/messages/channels/receivers/: channel_receiver.rs  fragment_receiver.rs  indexed_message_reader.rs  ordered_reliable_receiver.rs  reliable_message_receiver.rs  reliable_receiver.rs  sequenced_reliable_receiver.rs  sequenced_unreliable_receiver.rs  unordered_unreliable_receiver.rs
shared/src/messages/channels/senders/: channel_sender.rs  indexed_message_writer.rs  message_fragmenter.rs  reliable_sender.rs  sequenced_unreliable_sender.rs  unordered_unreliable_sender.rs
shared/src/messages/tests/: fragment.rs
shared/src/metrics/: mod.rs  rolling_window.rs
shared/src/transport/: conditioning.rs  mod.rs
shared/src/types/: conditioner.rs  index_buffer.rs  mod.rs  rollover_counter.rs  seq_num.rs  time_queue.rs
shared/src/world/component/: replicate.rs
shared/tests/: derive_enum.rs  derive_struct.rs  derive_tuple_struct.rs  derive_unit_struct.rs
socket/client/: Cargo.toml
socket/client/src/: conditioned_packet_receiver.rs  lib.rs  packet_receiver.rs  packet_sender.rs  socket.rs
socket/client/src/backends/: mod.rs
socket/client/src/backends/native/: socket.rs
socket/server/: Cargo.toml
socket/server/src/: socket.rs
socket/shared/: Cargo.toml
socket/shared/src/: lib.rs  link_condition_logic.rs  link_conditioner_config.rs  socket_config.rs  url_parse.rs
socket/shared/src/backends/: mod.rs
test/: Cargo.toml
test/tests/: connection.rs  handshake.rs
