[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "shared/derive",
    "shared/serde",
    "shared/serde/derive",
    "socket/shared",
    "test",
]
default-members = [
    "client",
    "server",
    "shared",
    "shared/derive",
    "shared/serde",
    "shared/serde/derive",
    "socket/shared",
]

[profile.release]
opt-level = 's'
lto = true
