[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "shared/derive",
    "shared/serde",
    "shared/serde/derive",
    "test",
]
default-members = [
    "client",
    "server",
    "shared",
    "shared/derive",
    "shared/serde",
    "shared/serde/derive",
]

[profile.release]
opt-level = 's'
lto = true
