[package]
name = "naia-client"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Provides a cross-platform client that can send/receive messages to/from a server."
documentation = "https://docs.rs/naia-client"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-shared = { version = "0.22", path = "../shared" }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
