[package]
name = "naia-client"
version = "1.0.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Provides a cross-platform client that can send/receive messages to/from a server."
documentation = "https://docs.rs/naia-client"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-shared = { path = "../shared" }
chacha20poly1305 = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }
x25519-dalek = { workspace = true }
