[package]
name = "naia-server"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "A server that uses UDP to send/receive messages to/from connected clients."
documentation = "https://docs.rs/naia-server"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "server", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
zstd_support = ["naia-shared/zstd_support"]

[dependencies]
naia-shared = { version = "0.22", path = "../shared" }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
ring = { version = "0.16.15" }
fastrand = { version = "1.7.0" }
