[package]
name = "naia-server"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "A server that uses UDP to send/receive messages to/from connected clients."
documentation = "https://docs.rs/naia-server"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "server", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-shared = { version = "0.22", path = "../shared" }
chacha20poly1305 = "0.10.x"
cfg-if = { version = "1.0" }
log = { version = "0.4" }
fastrand = { version = "1.7.0" }
x25519-dalek = "2.0.x"