[package]
name = "naia-server"
version = "1.0.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "A server that uses UDP to send/receive messages to/from connected clients."
documentation = "https://docs.rs/naia-server"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "server", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-shared = { path = "../shared" }
chacha20poly1305 = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }
fastrand = "2.3.x"
x25519-dalek = { workspace = true }