[package]
name = "naia-shared"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Common functionality shared between naia-server & naia-client crates"
documentation = "https://docs.rs/naia-shared"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-derive = { version = "0.22", path = "derive" }
naia-serde = { version = "0.22", path = "serde" }
log = { version = "0.4" }
rand = { version = "0.8" }
