[package]
name = "naia-shared"
version = "1.0.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
description = "Common functionality shared between naia-server & naia-client crates"
documentation = "https://docs.rs/naia-shared"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
readme = "../README.md"
keywords = ["udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chacha20poly1305 = "0.10"
naia-derive = { path = "derive" }
naia-serde = { path = "serde" }
log = { version = "0.4" }
rand = { version = "0.9.x" }
x25519-dalek = { version = "2.0.x", features = ["getrandom"] }
