[package]
name = "naia-test"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT"
edition = "2021"
publish = false

[features]


[dependencies]
naia-server = { path = "../server" }
naia-client = { path = "../client" }
naia-shared = { path = "../shared" }

