[package]
name = "naia-derive"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Procedural macros to simplify implementation of Naia Message trait"
documentation = "https://docs.rs/naia-derive"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
keywords = ["udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
naia-serde-derive = { version = "0.22", path = "../serde/derive" }
proc-macro2 = "1.0"
syn = { version = "2.0.29", features = ["clone-impls"] }
quote = "1.0"
