[package]
name = "naia-derive"
version = "1.0.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Procedural macros to simplify implementation of Naia Message trait"
documentation = "https://docs.rs/naia-derive"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
keywords = ["udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
naia-serde-derive = { path = "../serde/derive" }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
