[package]
name = "naia-serde"
version = "1.0.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>", "Fedor <not.fl3@gmail.com>", "makepad <info@makepad.nl>"]
workspace = "../.."
description = "Bit-level de/serialization for naia"
documentation = "https://docs.rs/naia-serde"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
keywords = ["serialization", "bit", "binary", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-serde-derive = { path = "derive" }
log = { workspace = true }
