[package]
name = "naia-client-socket"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Abstraction to expose common API over a UDP socket on Linux, and a unreliable WebRTC datachannel on the browser"
documentation = "https://docs.rs/naia-client-socket"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
keywords = ["webrtc", "udp", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
naia-socket-shared = { version = "0.22", path = "../shared" }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
js-sys = { version = "0.3", optional = true  }
web_sys = { version = "0.3", package = "web-sys", features = [
    "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelType", "MessageChannel", "MessagePort",
    "RtcIceCandidate", "RtcIceCandidateInit", "RtcConfiguration", "RtcDataChannelState",
    "RtcPeerConnection", "RtcSdpType",  "RtcSessionDescription", "RtcSessionDescriptionInit",
    "XmlHttpRequest", "XmlHttpRequestEventTarget", "MessageEvent", "ProgressEvent", "ErrorEvent", "Blob" ], optional = true  }
tinyjson = { version = "2.3", optional = true }
webrtc-unreliable-client = { version = "0.2" }
tokio = { version = "1.15", features = ["full"] }
once_cell = { version = "1.4.1" }
