[package]
name = "naia-socket-shared"
version = "0.22.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
description = "Common data types shared between naia-server-socket & naia-client-socket crates"
documentation = "https://docs.rs/naia-socket-shared"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
keywords = ["udp", "server", "gamedev", "networking"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cfg-if = { version = "1.0" }
log = { version = "0.4" }
url = { version = "2.2.2" }
rand = { version = "0.8" }
