[package]
name = "naia-serde-derive"
version = "1.0.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>", "Fedor <not.fl3@gmail.com>", "makepad <info@makepad.nl>"]
workspace = "../../.."
description = "Derive methods for naia-serde"
documentation = "https://docs.rs/naia-serde-derive"
homepage = "https://github.com/naia-lib/naia"
repository = "https://github.com/naia-lib/naia"
keywords = ["serialization", "bit", "binary", "networking", "gamedev"]
categories = ["network-programming", "game-development", "web-programming"]
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
log = { version = "0.4" }
proc-macro2 = "1.0"
syn = { version = "2.0.29" }
quote = "1.0"
